--- a/style.css
+++ b/style.css
@@ -23,18 +23,65 @@ body {
 	border-radius: 20px;
 	box-shadow: 5px 8px 50px black;
 }
-#facebook {
-	font-size: 50px;
-	color: #8E5572;
-}
-#twitter {
-	font-size:50px;
-	color: #8E5572;
-}
+
+
 #paragraphe1 {
 	font-weight: bold;
 }
 .list-inline {
 	color:#8E5572;
 	font-weight: bold;
+}
+
+.imagecolonne {
+	width: 100%;
+}
+.banner {
+  color: white;
+  text-align: center;
+  height: 100vh;
+  /* if you have a 70px navbar => height: calc(100vh - 70px); */
+  background-size: cover !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.banner h1 {
+  font-size: 50px;
+  font-weight: bold;
+  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+}
+.banner p {
+  font-size: 25px;
+  font-weight: lighter;
+  color: rgb(255, 255, 255);
+  opacity: 0.6;
+  margin-bottom: 30px;
+}
+
+.footer {
+  background: #F4F4F4;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+  padding: 0px 50px;
+  color: #8E5572;
+}
+.footer-links {
+  display: flex;
+  align-items: center;
+}
+.footer-links a {
+  color: black;
+  opacity: 0.15;
+  text-decoration: none;
+  font-size: 24px;
+  padding: 0px 10px;
+}
+.footer-links a:hover {
+  opacity: 1;
+}
+.footer .fa-heart {
+  color: #8E5572;
 }
